Import of EARONESTY/Bio-IlluminaSAV-1.0.6409 from CPAN.
gitpan-cpan-distribution: Bio-IlluminaSAV
gitpan-cpan-version:      1.0.6409
gitpan-cpan-path:         EARONESTY/Bio-IlluminaSAV-1.0.6409.tar.gz
gitpan-cpan-author:       EARONESTY
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,6 +1,5 @@
 NAME
-    Bio::IlluminaSAV - Parse Illumina SAV files (Share variables between
-    processes
+    Bio::IlluminaSAV - Parse Illumina SAV files
 
 SYNOPSIS
     Routines for parsing and extracting information from Illumina SAV files
