Import of EARONESTY/Bio-IlluminaSAV-1.0.9706 from CPAN.
gitpan-cpan-distribution: Bio-IlluminaSAV
gitpan-cpan-version:      1.0.9706
gitpan-cpan-path:         EARONESTY/Bio-IlluminaSAV-1.0.9706.tar.gz
gitpan-cpan-author:       EARONESTY
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -35,6 +35,7 @@ CONSTANTS
 
 FUNCTIONS
     cur_cycle Return the current run extraction cycle
+    cur_copy_cycle Return the current copy cycle
     max_cycles Return the maximum number of cycles
     num_lanes Return the number of lanes
     num_reads Return the number of reads
